--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -23,9 +27,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreen"
+            android:name="com.jetpack.ocac.SplashScreen"
             android:exported="true"
-            android:label="@string/title_activity_splash_screen"
+            android:label="@string/app_name"
             android:theme="@style/Theme.OCACApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,29 +38,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DashboardScreen"
+            android:name="com.jetpack.ocac.DashboardScreen"
             android:exported="false"
             android:label="@string/title_activity_dashboard_screen"
             android:theme="@style/Theme.OCACApp" />
         <activity
-            android:name=".OTPScreen"
+            android:name="com.jetpack.ocac.OTPScreen"
             android:exported="false"
             android:label="@string/title_activity_otpscreen"
             android:theme="@style/Theme.OCACApp" />
         <activity
-            android:name="com.jetpack.ocacapp.LoginScreenActivity"
+            android:name="com.jetpack.ocac.LoginScreenActivity"
             android:exported="false"
             android:label="@string/title_activity_login_screen"
             android:theme="@style/Theme.OCACApp" />
         <activity
-            android:name=".WalkthroughScreen"
+            android:name="com.jetpack.ocac.WalkthroughScreen"
             android:exported="false"
             android:label="@string/title_activity_walkthrough_screen"
             android:theme="@style/Theme.OCACApp" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.jetpack.ocac.MainActivity"
             android:exported="false"
-            android:label="@string/app_name"
             android:theme="@style/Theme.OCACApp">
 
         </activity>
