--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
-
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
@@ -26,6 +25,11 @@
         android:theme="@style/Theme.OCACApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name="com.jetpack.ocac.IFrameView"
+            android:exported="false"
+            android:label="@string/title_activity_iframe_view"
+            android:theme="@style/Theme.OCACApp" />
         <activity
             android:name="com.jetpack.ocac.SplashScreen"
             android:exported="true"
@@ -60,9 +64,7 @@
         <activity
             android:name="com.jetpack.ocac.MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.OCACApp">
-
-        </activity>
+            android:theme="@style/Theme.OCACApp"></activity>
     </application>
 
 </manifest>
